alpm-types/src/version/snapshots/base::invalid_pkgver@case_1.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid character
 | 
 | 1:foo
 |  ^ expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-pkgver: (:foo)
   → invalid character
   → expected ASCII characters, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
